# ESP32_demo

11-mp3_player/: sdkconfig  sdkconfig.old
11-mp3_player/main/: CMakeLists.txt  app_ui.c  esp32_s3_szp.c  esp32_s3_szp.h  main.c  siyuan.c
JLC_demo/SDcard/: sdkconfig  sdkconfig.old
JLC_demo/SDcard/main/: CMakeLists.txt  main.c
JLC_demo/codec_dev_demo/main/: CMakeLists.txt  hello_world_main.c  idf_component.yml
JLC_demo/codec_dev_input_demo/: sdkconfig
JLC_demo/codec_dev_input_demo/main/: CMakeLists.txt  hello_world_main.c
JLC_demo/mp3_no_ui/: CMakeLists.txt  sdkconfig  sdkconfig.old
JLC_demo/mp3_no_ui/main/: CMakeLists.txt  hello_world_main.c  idf_component.yml
JLC_demo/mp3_with_ui/: sdkconfig  sdkconfig.old
JLC_demo/mp3_with_ui/components/codec_dev/: CMakeLists.txt  codec_dev.c
JLC_demo/mp3_with_ui/components/codec_dev/include/: codec_dev.h
JLC_demo/mp3_with_ui/main/: CMakeLists.txt  GenShinGothic_ExtraLight_2.c  GenShinGothic_ExtraLight_2.h  app_ui.c  app_ui.h  idf_component.yml  lvgl_demo_ui.c  siyuan.h  spi_lcd_touch_example_main.c
JLC_demo/spi_lcd_touch/: sdkconfig  sdkconfig.old
JLC_demo/spi_lcd_touch/main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  spi_lcd_touch_example_main.c
NVS_str/: CMakeLists.txt
ds3231_ntp/: sdkconfig  sdkconfig.old
ds3231_ntp/components/DS3231/: CMakeLists.txt  i2c_ds3231.c
ds3231_ntp/components/NTP/: CMakeLists.txt  my_ntp.c  my_ntp.h
ds3231_ntp/main/: CMakeLists.txt  smartconfig_main.c
esp_wifi_get_config_test/main/: smartconfig_main.c
freertos/freertos_EventGroup/: CMakeLists.txt
freertos/freertos_Queue/: CMakeLists.txt
get_pass/: CMakeLists.txt
get_pass/main/: smartconfig_main.c
iic_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
iic_test/main/: i2c_eeprom_main.c
ntp/: CMakeLists.txt
ntp/main/: main.c
(+22 files in other folders)
